Fixed #395 - Remove google guava lib  - Replace many things with base JDK8 constructs.  - In JDK9 we can improve some parts an other step.  - shaded artifacts do not include Guava anymore.    dramatically reduced in size.